# task-list

./: .env.example  .gitignore  Dockerfile  compose.yaml  entrypoint.sh  memory  pyproject.toml
alembic/: env.py
alembic/versions/: 3c9dde81223f_added_users_table.py  7939044b4918_add_todos_table.py  9134a3b1217d_change_ids_format_from_str_to_uuid.py
app/: database.py  dependencies.py  main.py  models.py  schemas.py  security.py  settings.py
app/routers/: auth.py  todos.py  users.py
app/tasks/: celery_app.py  cleanup_tasks.py
tests/: conftest.py  test_auth.py  test_cleanup_tasks.py  test_db.py  test_dependencies.py  test_root.py  test_security.py  test_todos.py  test_users.py
